--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.player-music {
+  background-color: #333 !important;
+  width: 100%;
+  height: 100%;
+  border: none !important;
+}
