--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif ;
  
 }
 
 
 .player-music {
   background-color: #040404 !important;
-  width: 100%;
+  width: 90%;
   height: 70%;
+  color: #fff !important;
   border: none !important;
   
 }
